cleaner implementation with logging

--- a/examples/jaytwo.ejson.example.AspNetCore2_1/appsettings.json
+++ b/examples/jaytwo.ejson.example.AspNetCore2_1/appsettings.json
@@ -1,3 +1,4 @@
 {
-  "supersecret": "__sorry_not_loaded__"
+  "superSecret": "__sorry_not_loaded__",
+  "secretHealthcheck": "__sorry_not_loaded__"
 }
