--- a/src/jaytwo.ejson.AspNetCore.Configuration/jaytwo.ejson.AspNetCore.Configuration.csproj
+++ b/src/jaytwo.ejson.AspNetCore.Configuration/jaytwo.ejson.AspNetCore.Configuration.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
+    <VersionPrefix>0.1.0</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
@@ -10,7 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
   </ItemGroup>
-  
+
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
@@ -19,7 +20,26 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\jaytwo.ejson\jaytwo.ejson.csproj" />
+    <ProjectReference Include="..\jaytwo.ejson\jaytwo.ejson.csproj" PrivateAssets="None" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="runtimes\win7-x86\native\**\*">
+      <PackagePath>runtimes/win7-x86/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
+    <None Include="runtimes\win7-x64\native\**\*">
+      <PackagePath>runtimes/win7-x64/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
+    <None Include="runtimes\osx-x64\native\**\*">
+      <PackagePath>runtimes/osx-x64/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
+    <None Include="runtimes\linux-x64\native\**\*">
+      <PackagePath>runtimes/linux-x64/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
   </ItemGroup>
 
 </Project>
