--- a/src/jaytwo.ejson.CommandLine/jaytwo.ejson.CommandLine.csproj
+++ b/src/jaytwo.ejson.CommandLine/jaytwo.ejson.CommandLine.csproj
@@ -3,14 +3,34 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <VersionPrefix>0.1.0</VersionPrefix>
   </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\jaytwo.ejson\jaytwo.ejson.csproj" />
-    </ItemGroup>
-    
+  <ItemGroup>
+    <ProjectReference Include="..\jaytwo.ejson\jaytwo.ejson.csproj" PrivateAssets="None" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="runtimes\win7-x86\native\**\*">
+      <PackagePath>runtimes/win7-x86/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
+    <None Include="runtimes\win7-x64\native\**\*">
+      <PackagePath>runtimes/win7-x64/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
+    <None Include="runtimes\osx-x64\native\**\*">
+      <PackagePath>runtimes/osx-x64/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
+    <None Include="runtimes\linux-x64\native\**\*">
+      <PackagePath>runtimes/linux-x64/native/</PackagePath>
+      <Pack>true</Pack>
+    </None>
+  </ItemGroup>
+
 </Project>
