--- a/src/jaytwo.ejson/jaytwo.ejson.csproj
+++ b/src/jaytwo.ejson/jaytwo.ejson.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
+    <VersionPrefix>0.1.0</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup Condition = "'$(TargetFramework)' == 'netstandard2.0'">
@@ -13,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Sodium.Core" Version="1.2.0" />
+    <PackageReference Include="Sodium.Core" Version="1.2.0" PrivateAssets="None" />
   </ItemGroup>
 
 </Project>
