--- a/src/jaytwo.ejson.AspNetCore.Configuration/jaytwo.ejson.AspNetCore.Configuration.csproj
+++ b/src/jaytwo.ejson.AspNetCore.Configuration/jaytwo.ejson.AspNetCore.Configuration.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.1.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.*" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
