--- a/examples/jaytwo.ejson.example.AspNetCore2_1/jaytwo.ejson.example.AspNetCore2_1.csproj
+++ b/examples/jaytwo.ejson.example.AspNetCore2_1/jaytwo.ejson.example.AspNetCore2_1.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\jaytwo.ejson.AspNetCore.Configuration\jaytwo.ejson.AspNetCore.Configuration.csproj" />
+    <ProjectReference Include="..\..\src\jaytwo.ejson.Configuration\jaytwo.ejson.Configuration.csproj" />
   </ItemGroup>
 
 </Project>
