--- a/src/jaytwo.ejson.CommandLine/jaytwo.ejson.CommandLine.csproj
+++ b/src/jaytwo.ejson.CommandLine/jaytwo.ejson.CommandLine.csproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <VersionPrefix>0.1.0</VersionPrefix>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>ejson</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
