--- a/src/jaytwo.ejson.CommandLine/jaytwo.ejson.CommandLine.csproj
+++ b/src/jaytwo.ejson.CommandLine/jaytwo.ejson.CommandLine.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <VersionPrefix>0.1.1</VersionPrefix>
+    <VersionPrefix>0.1.2</VersionPrefix>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>ejson</ToolCommandName>
+    <RepositoryUrl>https://github.com/jakegough/jaytwo.ejson</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
