--- a/src/jaytwo.ejson/jaytwo.ejson.csproj
+++ b/src/jaytwo.ejson/jaytwo.ejson.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard1.3;netstandard1.6;netstandard2.0</TargetFrameworks>
-    <VersionPrefix>0.1.1</VersionPrefix>
+    <VersionPrefix>0.1.2</VersionPrefix>
+    <RepositoryUrl>https://github.com/jakegough/jaytwo.ejson</RepositoryUrl>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(TargetFramework)' == 'net45'">
