--- a/test/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests.csproj
+++ b/test/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
