--- a/test/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests.csproj
+++ b/test/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests.csproj
@@ -5,15 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="jaytwo.SolutionResolution" Version="0.1.0-beta-20190407052034" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="1.1.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="coverlet.msbuild" Version="2.6.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\examples\jaytwo.ejson.example.AspNetCore1_1\jaytwo.ejson.example.AspNetCore1_1.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <UseSourceLink>true</UseSourceLink>
+    <CollectCoverage>true</CollectCoverage>
+    <Exclude>[xunit.*]*</Exclude>
+    <ExcludeByAttribute>Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute</ExcludeByAttribute>
+    <CoverletOutputFormat>cobertura</CoverletOutputFormat>
+    <CoverletOutput>$(MSBuildThisFileDirectory)../../out/coverage/$(AssemblyName)/$(TargetFramework)/</CoverletOutput>
+  </PropertyGroup>
+  
 </Project>
