renamed CommandLine package to GlobalTool

--- a/test/jaytwo.ejson.GlobalTool.Tests/jaytwo.ejson.GlobalTool.Tests.csproj
+++ b/test/jaytwo.ejson.GlobalTool.Tests/jaytwo.ejson.GlobalTool.Tests.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\jaytwo.ejson.CommandLine\jaytwo.ejson.GlobalTool.csproj" />
+    <ProjectReference Include="..\..\src\jaytwo.ejson.GlobalTool\jaytwo.ejson.GlobalTool.csproj" />
   </ItemGroup>
 
 </Project>
