--- a/src/jaytwo.ejson.GlobalTool/jaytwo.ejson.GlobalTool.csproj
+++ b/src/jaytwo.ejson.GlobalTool/jaytwo.ejson.GlobalTool.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <VersionPrefix>0.1.5</VersionPrefix>
+    <VersionPrefix>0.1.6</VersionPrefix>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>ejson</ToolCommandName>
     <RepositoryUrl>https://github.com/jakegough/jaytwo.ejson</RepositoryUrl>
