--- a/examples/jaytwo.ejson.example.AspNetCore3_0/jaytwo.ejson.example.AspNetCore3_0.csproj
+++ b/examples/jaytwo.ejson.example.AspNetCore3_0/jaytwo.ejson.example.AspNetCore3_0.csproj
@@ -1,21 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <VersionPrefix>0.1.6</VersionPrefix>
-    <PackAsTool>true</PackAsTool>
-    <ToolCommandName>ejson</ToolCommandName>
-    <RepositoryUrl>https://github.com/jakegough/jaytwo.ejson</RepositoryUrl>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\jaytwo.ejson\jaytwo.ejson.csproj" />
+    <ProjectReference Include="..\..\src\jaytwo.ejson.Configuration\jaytwo.ejson.Configuration.csproj" />
   </ItemGroup>
 
   <ItemGroup>
