--- a/test/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests.csproj
+++ b/test/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests/jaytwo.ejson.example.AspNetCore2_1.IngegrationTests.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="jaytwo.SolutionResolution" Version="0.1.0-beta-20190407052034" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
