--- a/src/jaytwo.ejson.GlobalTool/jaytwo.ejson.GlobalTool.csproj
+++ b/src/jaytwo.ejson.GlobalTool/jaytwo.ejson.GlobalTool.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="2.*" />
   </ItemGroup>
 
   <ItemGroup>
