benign updates to csproj layout

--- a/test/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests.csproj
+++ b/test/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests/jaytwo.ejson.example.AspNetCore1_1.IngegrationTests.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\examples\jaytwo.ejson.example.AspNetCore1_1\jaytwo.ejson.example.AspNetCore1_1.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="jaytwo.SolutionResolution" Version="0.1.0" />
@@ -12,10 +16,6 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.msbuild" Version="2.6.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\examples\jaytwo.ejson.example.AspNetCore1_1\jaytwo.ejson.example.AspNetCore1_1.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
