--- a/src/jaytwo.ejson.GlobalTool/jaytwo.ejson.GlobalTool.csproj
+++ b/src/jaytwo.ejson.GlobalTool/jaytwo.ejson.GlobalTool.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -12,11 +12,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
+    <ProjectReference Include="..\jaytwo.ejson\jaytwo.ejson.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\jaytwo.ejson\jaytwo.ejson.csproj" />
+    <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
