--- a/examples/jaytwo.ejson.example.AspNetCore3_0/jaytwo.ejson.example.AspNetCore3_0.csproj
+++ b/examples/jaytwo.ejson.example.AspNetCore3_0/jaytwo.ejson.example.AspNetCore3_0.csproj
@@ -8,7 +8,10 @@
     <ProjectReference Include="..\..\src\jaytwo.ejson.Configuration\jaytwo.ejson.Configuration.csproj" />
   </ItemGroup>
 
+  <!-- stylecop -->
   <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
+    <PackageReference Include="StyleCop.Analyzers.Error" Version="1.0.2" PrivateAssets="All" />
     <AdditionalFiles Include="$(ProjectDir)..\..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
@@ -17,13 +20,6 @@
     <StyleCopTreatErrorsAsWarnings>true</StyleCopTreatErrorsAsWarnings>
     <CodeAnalysisRuleSet>$(ProjectDir)..\..\stylecop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers.Error" Version="1.0.2" />
-  </ItemGroup>
+  <!-- /stylecop -->
 
 </Project>
