--- a/test/jaytwo.ejson.example.AspNetCore3_0.IngegrationTests/jaytwo.ejson.example.AspNetCore3_0.IngegrationTests.csproj
+++ b/test/jaytwo.ejson.example.AspNetCore3_0.IngegrationTests/jaytwo.ejson.example.AspNetCore3_0.IngegrationTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,13 +10,18 @@
 
   <ItemGroup>
     <PackageReference Include="jaytwo.SolutionResolution" Version="0.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.0.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.0.*" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Moq" Version="4.10.1" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.*" />
   </ItemGroup>
+  
+  <!-- default test packages -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="Moq" Version="4.14.4" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2" PrivateAssets="All" />
+  </ItemGroup>
+  <!-- /default test packages -->
 
   <!-- stylecop -->
   <ItemGroup>
